<resources>
    <string name="app_name">NetPatrolApp</string>

    <!-- Strings related to login -->
    <string name="prompt_company">公司ID</string>
    <string name="prompt_user">用户</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <string name="AppName">凯和云巡更</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btnMainMenu">常用功能</string>
    <string name="uploadPatrolRecord">上传巡检数据</string>
    <string name="queryPatrolRecord">查看巡检记录</string>
    <string name="queryCheckResult">查看考核结果</string>
    <string name="queryCountMap">查看统计图表</string>
    <string name="setMachine">设置巡检机</string>
    <string name="testMachine">测试巡检机</string>

    <string name="btnSubMenu">其他功能</string>
    <string name="queryPatrolResult">考核结果查询</string>
    <string name="addPlan">班次录入</string>
    <string name="setPlan">分配班次</string>
    <string name="planTab">巡检计划表</string>
    <string name="setPermission">权限设置</string>

    <string name="userNotLogin">点击登录</string>
    <string name="tvWaitForConnect">连接中……请稍等</string>
    <string name="app_help">帮助</string>
    <string name="app_set">设置</string>
    <string name="place">占位</string>
    <string name="tvMachineNotFound">未检测到巡更设备</string>
    <string name="tvMachineNotFoundDesc">请先使用OTG+USB线连接巡更机</string>
    <string name="tvTimeLeftKey">预计剩余时间:</string>
    <string name="tvRecordCountKey">存储记录数:</string>
    <string name="tvMachineTypeKey">巡更机类型:</string>
    <string name="tvMachineIdKey">巡更机机号:</string>
    <string name="tvMachineInfoTitle">巡更机信息</string>
    <string name="tvStateReading">正在读取巡检机机数据...</string>
    <string name="tvStateUploading">正在上传数据...</string>
    <string name="btnBegin">上传数据</string>
    <string name="tvWaitForQuery">查询中......请稍等</string>
    <string name="title_activity_login">用户登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="tbUpload">上传数据</string>
    <string name="btnCancel">取消</string>
    <string name="back">返回</string>
    <string name="testDevice">通讯管理</string>
    <string name="hitRecord">敲击记录</string>
    <string name="logout">切换用户</string>
    <string name="editUser">修改信息</string>
</resources>
