<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.khdz.patrol.netpatrolapp.Fragment.Fragment01">
    <ImageView android:layout_width="match_parent" android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/ivLogo"
        android:src="@drawable/main_logo"
        android:layout_margin="2dp"
        android:scaleType="fitXY"
        android:background="#FFFFFF"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <LinearLayout android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button android:id="@+id/btn_queryPatrolRecord"
                android:text="@string/queryPatrolRecord"
                style="@style/MainMenuBtnStyle"
                android:background="@color/main_query_patrol_record"

                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:drawableTop="@mipmap/main_btn_see_record"/>
            <Button android:id="@+id/btn_queryCheckResult"
                style="@style/MainMenuBtnStyle"
                android:text="@string/queryCheckResult"
                android:background="@color/main_query_patrol_point"
                android:layout_margin="1dp"
                android:layout_marginBottom="0dp"
                android:drawableTop="@mipmap/main_btn_see_point"/>

            <Button android:id="@+id/btn_queryCountMap"
                style="@style/MainMenuBtnStyle"
                android:text="@string/queryCountMap"
                android:background="@color/main_query_patrol_worker"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:drawableTop="@mipmap/main_btn_see_worker"/>
        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button android:id="@+id/btn_uploadPatrolRecord"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="0dp"
                android:paddingTop="75dp"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:background="@color/main_upload_record"
                android:text="@string/uploadPatrolRecord"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:drawableTop="@mipmap/main_btn_upload"
                android:gravity="center"/>
            <Button android:id="@+id/btn_hitRecord"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:paddingTop="25dp"
                android:text="@string/hitRecord"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:textColor="@color/white"
                android:drawableTop="@mipmap/main_btn_more"
                android:background="@color/main_more"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>


